<!-- Copyright 2010 Atlassian Licensed under the Apache License, Version 
    2.0 (the "License"); you may not use this file except in compliance with 
    the License. You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0 
    Unless required by applicable law or agreed to in writing, software distributed 
    under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES 
    OR CONDITIONS OF ANY KIND, either express or implied. See the License for 
    the specific language governing permissions and limitations under the License. -->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>com.atlassian.pom</groupId>
    <artifactId>central-pom</artifactId>
    <version>5.0.21</version>
  </parent>

  <groupId>io.atlassian.fugue</groupId>
  <artifactId>fugue-parent</artifactId>
  <packaging>pom</packaging>
  <version>5.0.0-SNAPSHOT</version>
  <name>Functional Extensions Library</name>

  <issueManagement>
    <system>Bitbucket</system>
    <url>https://bitbucket.org/atlassian/fugue/issues</url>
  </issueManagement>
  <ciManagement>
    <system>Bamboo</system>
    <url>https://ecosystem-bamboo.internal.atlassian.com/browse/FUGUE</url>
  </ciManagement>
  <scm>
    <connection>scm:git:git@bitbucket.org:atlassian/fugue.git</connection>
    <developerConnection>scm:git:git@bitbucket.org:atlassian/fugue.git</developerConnection>
    <url>https://bitbucket.org/atlassian/fugue</url>
    <tag>HEAD</tag>
  </scm>

  <licenses>
    <license>
      <name>Apache License 2.0</name>
      <url>http://www.apache.org/licenses/LICENSE-2.0</url>
      <distribution>repo</distribution>
    </license>
  </licenses>

  <distributionManagement>
    <site>
      <id>atlassian-documentation</id>
      <url>scpexe://docs-app.internal.atlassian.com/var/www/domains/docs.atlassian.com/${project.artifactId}/${project.version}</url>
    </site>
  </distributionManagement>

  <modules>
    <module>fugue</module>
    <module>fugue-optics</module>
    <module>fugue-scala</module>
    <module>fugue-retry</module>
    <module>fugue-guava</module>
    <module>fugue-deprecated</module>
    <module>fugue-hamcrest</module>
    <module>fugue-quickcheck-generators</module>
    <module>fugue-extensions</module>
  </modules>

  <properties>
    <annotations.version>3.0.0</annotations.version>
    <clover.version>${openclover.version}</clover.version>
    <fugue.osgi.export.version>${project.version}</fugue.osgi.export.version>
    <guava.version>26.0-jre</guava.version>
    <hamcrest-optional.version>2.0.0</hamcrest-optional.version>
    <hamcrest.version>1.3</hamcrest.version>
    <jdkLevel>1.8</jdkLevel>
    <junit-quickcheck.version>0.6.1</junit-quickcheck.version>
    <junit.version>4.13</junit.version>
    <maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.target>1.8</maven.compiler.target>
    <maven.javadoc.plugin.version>2.10.3</maven.javadoc.plugin.version>
    <mockito.version>2.21.0</mockito.version>
    <openclover.version>4.4.1</openclover.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <slf4j.version>1.7.25</slf4j.version>
  </properties>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>com.google.code.findbugs</groupId>
        <artifactId>annotations</artifactId>
        <version>${annotations.version}</version>
      </dependency>
      <dependency>
        <groupId>com.google.guava</groupId>
        <artifactId>guava</artifactId>
        <version>${guava.version}</version>
      </dependency>
      <dependency>
        <groupId>org.slf4j</groupId>
        <artifactId>slf4j-api</artifactId>
        <version>${slf4j.version}</version>
      </dependency>
      <dependency>
        <groupId>org.slf4j</groupId>
        <artifactId>slf4j-simple</artifactId>
        <version>${slf4j.version}</version>
      </dependency>


      <!-- Test deps -->
      <dependency>
        <groupId>com.pholser</groupId>
        <artifactId>junit-quickcheck-core</artifactId>
        <version>${junit-quickcheck.version}</version>
      </dependency>
      <dependency>
        <groupId>com.pholser</groupId>
        <artifactId>junit-quickcheck-generators</artifactId>
        <version>${junit-quickcheck.version}</version>
      </dependency>
      <dependency>
        <groupId>com.github.npathai</groupId>
        <artifactId>hamcrest-optional</artifactId>
        <version>${hamcrest-optional.version}</version>
      </dependency>
      <dependency>
        <groupId>junit</groupId>
        <artifactId>junit</artifactId>
        <version>${junit.version}</version>
      </dependency>
      <dependency>
        <groupId>org.mockito</groupId>
        <artifactId>mockito-core</artifactId>
        <version>${mockito.version}</version>
      </dependency>
      <dependency>
        <groupId>org.hamcrest</groupId>
        <artifactId>hamcrest-library</artifactId>
        <version>${hamcrest.version}</version>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <build>
    <plugins>
      <plugin>
        <groupId>net.revelc.code</groupId>
        <artifactId>formatter-maven-plugin</artifactId>
        <version>0.5.2</version>
        <executions>
          <execution>
            <phase>process-sources</phase>
            <goals>
              <goal>format</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <configFile>${project.basedir}/../src/etc/eclipse/formatter.xml</configFile>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.scalariform</groupId>
        <artifactId>scalariform-maven-plugin</artifactId>
        <version>0.1.4</version>
        <executions>
          <execution>
            <phase>process-sources</phase>
            <goals>
              <goal>format</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <preserveDanglingCloseParenthesis>true</preserveDanglingCloseParenthesis>
        </configuration>
      </plugin>
      <plugin>
        <groupId>com.atlassian.maven.plugins</groupId>
        <artifactId>clover-maven-plugin</artifactId>
        <version>${clover.version}</version>
        <configuration>
          <licenseLocation>${license.location}</licenseLocation>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-release-plugin</artifactId>
        <configuration>
          <autoVersionSubmodules>true</autoVersionSubmodules>
          <tagNameFormat>v@{project.version}</tagNameFormat>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <compilerArgs>
            <arg>-Xlint:all</arg>
            <arg>-Werror</arg>
          </compilerArgs>
        </configuration>
      </plugin>
    </plugins>
  </build>

</project>
